# profiling-decorator

./: README.md  pyproject.toml
.github/workflows/: blacken.yml  publish-to-pypi.yml  pylint.yml  pytest.yml  python-package.yml
src/profiling_decorator/: __init__.py  validation.py  version.py
tests/: __init__.py
tests/profile_decorator/: test_profile_decorator.py
